--- a/services/runtime/pom.xml
+++ b/services/runtime/pom.xml
@@ -7,16 +7,15 @@
         <version>4.1-SNAPSHOT</version>
     </parent>
     <artifactId>runtime</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>YAWL - Services Runtime</name>
 
     <properties>
-        <hibernate.dialect>org.hibernate.dialect.PostgreSQLDialect</hibernate.dialect>
-        <hibernate.connection.driver_class>org.postgresql.Driver</hibernate.connection.driver_class>
-        <hibernate.connection.url>jdbc:postgresql:yawl</hibernate.connection.url>
-        <hibernate.connection.username>postgres</hibernate.connection.username>
-        <hibernate.connection.password>yawl</hibernate.connection.password>
+        <hibernate.dialect>org.hibernate.dialect.HSQLDialect</hibernate.dialect>
+        <hibernate.connection.driver_class>org.hsqldb.jdbc.JDBCDriver</hibernate.connection.driver_class>
+        <hibernate.connection.url>jdbc:hsqldb:file:${project.build.directory}/yawl-db/yawl</hibernate.connection.url>
+        <hibernate.current_session_context_class>thread</hibernate.current_session_context_class>
     </properties>
 
     <build>
@@ -34,9 +33,9 @@
                     <!--warSourceDirectory>${project.build.directory}/${project.build.finalName}/</warSourceDirectory-->
                     <systemProperties>
                         <!-- TODO use profiles -->
-                        <hibernate.dialect>org.hibernate.dialect.H2Dialect</hibernate.dialect>
-                        <hibernate.connection.driver_class>org.h2.Driver</hibernate.connection.driver_class>
-                        <hibernate.connection.url>jdbc:h2:~/yawl;MVCC=TRUE;AUTO_SERVER=TRUE</hibernate.connection.url>
+                        <hibernate.dialect>org.hibernate.dialect.HSQLDialect</hibernate.dialect>
+                        <hibernate.connection.driver_class>org.hsqldb.jdbc.JDBCDriver</hibernate.connection.driver_class>
+                        <hibernate.connection.url>jdbc:hsqldb:file:${project.build.directory}/yawl-db/yawl</hibernate.connection.url>
                         <hibernate.current_session_context_class>thread</hibernate.current_session_context_class>
                     </systemProperties>
                     <webapps> 
@@ -244,6 +243,13 @@
                         <version>1.3.3</version>
                     </dependency>
 
+                    <!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
+                    <dependency>
+                        <groupId>org.hsqldb</groupId>
+                        <artifactId>hsqldb</artifactId>
+                        <version>2.4.0</version>
+                    </dependency>
+
                     <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
                     <dependency>
                         <groupId>com.h2database</groupId>
@@ -284,6 +290,15 @@
     </dependencies>
     
     <profiles>        
+        <profile>
+            <id>HsqlDB</id>            
+            <properties>            
+                <hibernate.dialect>org.hibernate.dialect.HSQLDialect</hibernate.dialect>
+                <hibernate.connection.driver_class>org.hsqldb.jdbc.JDBCDriver</hibernate.connection.driver_class>
+                <hibernate.connection.url>jdbc:hsqldb:file:${project.build.directory}/yawl-db/yawl</hibernate.connection.url>
+                <hibernate.current_session_context_class>thread</hibernate.current_session_context_class>                        
+            </properties>
+        </profile>
         <profile>
             <id>H2</id>            
             <properties>
